--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,56 @@
   </head>
 
   <body>
-    <t1>HOOOLA</t1>
+    <table id='hmani' width="85%" cellspacing="0" cellpadding="0" border="0" bgcolor="#f6f6ef">
+      <tbody>
+        <tr>
+          <td bgcolor="#ff6600">
+            <table style="padding:2px" width="100%" cellspacing="0" cellpadding="0" border="0">
+              <tbody>
+                <tr>
+                  <td style='width:18px;padding-right:4px;'>
+                    <a> 
+                      <%= image_tag("logo.gif", style: "border:1px white solid; width:18; height:18") %>
+                    </a>
+                  </td>
+                  <td style='line-height:12pt; height:10px;'>
+                    <span class='pagetop'>
+                      <b>
+                        <a>Hacker News</a>
+                      </b>
+                      <a>welcome</a>
+                      |
+                      <a>new</a>
+                      |
+                      <a>threads</a>
+                      |
+                      <a>past</a>
+                      |
+                      <a>comments</a>
+                      |
+                      <a>ask</a>
+                      |
+                      <a>show</a>
+                      |
+                      <a>jobs</a>
+                      |
+                      <a>submit</a>
+                      
+                    </span>
+                  </td>
+                    
+                  <td style='text-align:right;padding-right:4px;'>
+                    <span class='pagetop'>
+                      <a>login</a>
+                    </span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
     <%= yield %>
   </body>
 </html>
