--- a/app/views/contribucions/index.html.erb
+++ b/app/views/contribucions/index.html.erb
@@ -9,6 +9,7 @@
       <th>Title</th>
       <th>Url</th>
       <th>Text</th>
+      <th>Points</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,8 @@
         <td><%= contribucion.title %></td>
         <td><%= contribucion.url %></td>
         <td><%= contribucion.text %></td>
+        <td><%= contribucion.points %></td>
+        <td><%= link_to 'UpVote', upvote_contribucion_path(contribucion), method: :put%></td>
         <td><%= link_to 'Show', contribucion %></td>
         <td><%= link_to 'Edit', edit_contribucion_path(contribucion) %></td>
         <td><%= link_to 'Destroy', contribucion, method: :delete, data: { confirm: 'Are you sure?' } %></td>
