--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
                       </center>
                     </td>
                       <td class="title">
-                        <a href="" class="storylink"><%=contribucion.title></a>
+                        <a href="" class="storylink"><%=contribucion.title%></a>
                         <span class="sitebit comhead"> (<a href=""><span class="sitestr">onezero.medium.com</span></a>)</span>
                       </td>
                     </tr>
