--- a/app/views/contribucions/index.html.erb
+++ b/app/views/contribucions/index.html.erb
@@ -28,7 +28,9 @@
                       <b class="hnname">
                         <a href="news">Hacker News</a>
                       </b>
-                      <a href="newest">new</a> | <a href="front">past</a> | <a href="newcomments">comments</a> 
+                      <%= link_to 'new', new_page_path %>
+                      | <a href="front">past</a> 
+                      | <a href="newcomments">comments</a> 
                       | <a href="ask">ask</a> |
                       <a href="show">show</a> |
                       <a href="jobs">jobs</a> | 
