--- a/app/views/contribucions/index.html.erb
+++ b/app/views/contribucions/index.html.erb
@@ -28,7 +28,7 @@
                       <b class="hnname">
                         <a href="news">Hacker News</a>
                       </b>
-                      <%= link_to 'new', new_page_path %>
+                      <%= link_to 'new', newest_page_path %>
                       | <a href="front">past</a> 
                       | <a href="newcomments">comments</a> 
                       | <a href="ask">ask</a> |
