--- a/app/views/contribucions/index.html.erb
+++ b/app/views/contribucions/index.html.erb
@@ -19,14 +19,14 @@
                 <tbody>
                   <tr>
                     <td style="width:18px;padding-right:4px">
-                      <a href="https://news.ycombinator.com">
+                      <a href="/">
                         <%= image_tag("logo.gif", style: "border:1px white solid; width:18; height:18") %>
                       </a>
                     </td>
                   <td style="line-height:12pt; height:10px;">
                     <span class="pagetop">
                       <b class="hnname">
-                        <a href="news">Hacker News</a>
+                        <a href="/">Hacker News</a>
                       </b>
                       <a href="new">new</a>
                       | <a href="front">past</a> 
