--- a/app/views/contribucions/new.html.erb
+++ b/app/views/contribucions/new.html.erb
@@ -1,5 +1,35 @@
-<h1>New Contribucion</h1>
+<center>
+    <table id="hnmain" width="85%" cellspacing="0" cellpadding="0" border="0" bgcolor="#f6f6ef">
+        <tbody>
+            <tr>
+                <td bgcolor="#ff6600">
+                    <table style="padding:2px" width="100%" cellspacing="0" cellpadding="0" border="0">
+                        <tbody>
+                            <tr>
+                                <td style="width:18px;padding-right:4px">
+                                    <a href="/">
+                                        <%= image_tag("logo.gif", style: "border:1px white solid; width:18; height:18") %>
+                                      </a>
+                                </td>
+                                <td style="line-height:12pt; height:10px;">
+                                    <span class="pagetop">
+                                        <b>Submit</b>
+                                    </span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+                
+            </tr>
+            <tr style="height:10px">
+            </tr>
+            <tr>
+                <td>
+                    <%= render 'form', contribucion: @contribucion %>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</center>
 
-<%= render 'form', contribucion: @contribucion %>
-
-<%= link_to 'Back', contribucions_path %>
