--- a/app/views/contribucions/index.html.erb
+++ b/app/views/contribucions/index.html.erb
@@ -28,8 +28,7 @@
                       <b class="hnname">
                         <a href="/"> HackerNews</a>
                       </b>
-                        
-                      <%= link_to 'new', newPage_contribucion_path(@contribucions) %>
+                      <%= link_to 'new', newPage_contribucion_path(@contribucions, :id) %>
                       | <a href="front">past</a> 
                       | <a href="newcomments">comments</a> 
                       | <a href="ask">ask</a> |
