newPage y index mismo archivo

--- a/app/views/contribucions/newPage.html.erb
+++ b/app/views/contribucions/newPage.html.erb
@@ -1,118 +1,2 @@
-<p id="notice"><%= notice %></p>
-
-<!DOCTYPE html>                      
-<html>
-  <head>
-    <title>Hackersnews</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-<center>
-  <table id="hnmain" width="85%" cellspacing="0" cellpadding="0" border="0" bgcolor="#f6f6ef">
-        <tbody>
-          <tr>
-            <td bgcolor="#ff6600">
-              <table style="padding:2px" width="100%" cellspacing="0" cellpadding="0" border="0">
-                <tbody>
-                  <tr>
-                    <td style="width:18px;padding-right:4px">
-                      <a href="/">
-                        <%= image_tag("logo.gif", style: "border:1px white solid; width:18; height:18") %>
-                      </a>
-                    </td>
-                  <td style="line-height:12pt; height:10px;">
-                    <span class="pagetop">
-                      <b class="hnname">
-                        <a href="/"> HackerNews</a>
-                      </b>
-                        
-                      <%= link_to 'new', newPage_contribucion_path(@contribucions) %>
-                      | <a href="front">past</a> 
-                      | <a href="newcomments">comments</a> 
-                      | <a href="ask">ask</a> |
-                      <a href="show">show</a> |
-                      <a href="jobs">jobs</a> | 
-                      <%= link_to 'submit', new_contribucion_path %>           
-                    </span>
-                  </td>
-                  <td style="text-align:right;padding-right:4px;">
-                    <span class="pagetop">
-                      <a href="login?goto=news">login</a>
-                    </span>
-                  </td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          <% @rank = 1%>
-          <tr id="pagespace" title="" style="height:10px"></tr>
-          <tr>
-            <td>
-              <table class="itemlist" cellspacing="0" cellpadding="0" border="0">
-                <% @contribucions.each do |contribucion| %>
-                  <tbody>
-                    <tr class="athing" id="22681207">
-                      <td class="title" valign="top" align="right">
-                        <span class="rank"><%= @rank %>.</span>
-                      </td>      
-                    <td class="votelinks" valign="top">
-                      <center>
-                        <a id="up_22681207" href="vote?id=22681207&amp;how=up&amp;goto=news">
-                          <div class="votearrow" title="upvote"></div>
-                        </a>
-                      </center>
-                    </td>
-                      <td class="title">
-                        <a href="" class="storylink"><%=contribucion.title%></a>
-                        <span class="sitebit comhead"> (<a href=""><span class="sitestr">onezero.medium.com</span></a>)</span>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td colspan="2"></td>
-                      <td class="subtext">
-                      <span class="score" id="score_22681207"><%=contribucion.points%> points</span>
-                        by 
-                        <a href="user?id=us0r" class="hnuser">usuariHardcoded</a> 
-                        <span class="age">
-                          <a href="item?id=22681207">0 hours ago</a>
-                        </span> 
-                        <span id="unv_22681207"></span> | <a href="hide?id=22681207&amp;goto=news">hide</a> | <a href="item?id=22681207">0&nbsp;comments</a>              
-                      </td>
-                    </tr>
-                    <tr class="spacer" style="height:5px"></tr>
-                  </tbody>
-                  <% @rank = @rank + 1%>
-                <%end%>
-              
-                <tr class="athing" id="22679138">
-                      <tr class="morespace" style="height:10px"></tr>
-                      <tr>
-                        <td colspan="2"></td>
-                        <td class="title"><a href="news?p=2" class="morelink" rel="next">More</a>
-                        </td>
-                </tr>
-            </table>
-          </td></tr>
-          <tr><td><img src="s.gif" width="0" height="10"><table width="100%" cellspacing="0" cellpadding="1"><tbody><tr><td bgcolor="#ff6600"></td></tr></tbody></table><br><center><a href="https://www.ycombinator.com/apply/">
-                  Applications are open for YC Summer 2020
-                </a></center><br><center><span class="yclinks"><a href="newsguidelines.html">Guidelines</a>
-                  | <a href="newsfaq.html">FAQ</a>
-                  | <a href="mailto:hn@ycombinator.com">Support</a>
-                  | <a href="https://github.com/HackerNews/API">API</a>
-                  | <a href="security.html">Security</a>
-                  | <a href="lists">Lists</a>
-                  | <a href="bookmarklet.html" rel="nofollow">Bookmarklet</a>
-                  | <a href="http://www.ycombinator.com/legal/">Legal</a>
-                  | <a href="http://www.ycombinator.com/apply/">Apply to YC</a>
-                  | <a href="mailto:hn@ycombinator.com">Contact</a></span><br><br><form method="get" action="//hn.algolia.com/">Search:
-                    <input type="text" name="q" value="" size="17" autocorrect="off" spellcheck="false" autocapitalize="off" autocomplete="false"></form>
-                      </center></td></tr>
-      </tbody>
-      </table>
-      </center>
-      <script type="text/javascript" src="hn.js?WtiDADWyAh3OLz9I78m7"></script>
-</html>
+ 
+ <%= render 'contribucions/index', contribucion: @contribucion %>
