--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -67,7 +67,7 @@
                     </td>
                       <td class="title">
                         <a href="" class="storylink"><%=contribucion.title%></a>
-                        <span class="sitebit comhead"> (<a href=""><span class="sitestr">onezero.medium.com</span></a>)</span>
+                        <span class="sitebit comhead"> (<a href=""><span class="sitestr"><%=contribucion.url%></span></a>)</span>
                       </td>
                     </tr>
                     <tr>
