--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -39,7 +39,7 @@
                   </td>
                   <td style="text-align:right;padding-right:4px;">
                     <span class="pagetop">
-                      <a href="login?goto=news">login</a>
+                      <%= link_to 'Login', user_session_path %>
                     </span>
                   </td>
                   </tr>
