Iconito de votar

--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -61,7 +61,7 @@
                     <td class="votelinks" valign="top">
                       <center>
                         <a id="up_22681207" href="vote?id=22681207&amp;how=up&amp;goto=news">
-                          <div class="votearrow" title="upvote"></div>
+                          <div class="votearrow" title="upvote">▲</div>
                         </a>
                       </center>
                     </td>
