Le das a like y augmenta los points

--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -60,8 +60,7 @@
                       </td>      
                     <td class="votelinks" valign="top">
                       <center>
-                        <a id="up_22681207" href="vote?id=22681207&amp;how=up&amp;goto=news">
-                          <div class="votearrow" title="upvote">▲</div>
+                        <a id="up_22681207" <%= link_to '▲', upvote_contribucion_path(contribucion), method: :put %>
                         </a>
                       </center>
                     </td>
