--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -65,8 +65,8 @@
                       </center>
                     </td>
                       <td class="title">
-                        <a href="" class="storylink"><%=contribucion.title%></a>
-                        <span class="sitebit comhead"> (<a href=""><span class="sitestr"><%=contribucion.url%></span></a>)</span>
+                        <a href="/contribucions/<%=contribucion.id%>" class="storylink"><%=contribucion.title%></a>
+                        <span class="sitebit comhead"> (<a href="<%=contribucion.url%>"><span class="sitestr"><%=contribucion.url%></span></a>)</span>
                       </td>
                     </tr>
                     <tr>
@@ -74,7 +74,7 @@
                       <td class="subtext">
                       <span class="score" id="score_22681207"><%=contribucion.points%> points</span>
                         by 
-                        <a href="user?id=us0r" class="hnuser">usuariHardcoded</a> 
+                        <a href="/users/<%=contribucion.user_id%>" class="hnuser">"hard" </a> 
                         <span class="age">
                           <a href="item?id=22681207">0 hours ago</a>
                         </span> 
