--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -95,20 +95,9 @@
                 </tr>
             </table>
           </td></tr>
-          <tr><td><img src="s.gif" width="0" height="10"><table width="100%" cellspacing="0" cellpadding="1"><tbody><tr><td bgcolor="#ff6600"></td></tr></tbody></table><br><center><a href="https://www.ycombinator.com/apply/">
-                  Applications are open for YC Summer 2020
-                </a></center><br><center><span class="yclinks"><a href="newsguidelines.html">Guidelines</a>
-                  | <a href="newsfaq.html">FAQ</a>
-                  | <a href="mailto:hn@ycombinator.com">Support</a>
-                  | <a href="https://github.com/HackerNews/API">API</a>
-                  | <a href="security.html">Security</a>
-                  | <a href="lists">Lists</a>
-                  | <a href="bookmarklet.html" rel="nofollow">Bookmarklet</a>
-                  | <a href="http://www.ycombinator.com/legal/">Legal</a>
-                  | <a href="http://www.ycombinator.com/apply/">Apply to YC</a>
-                  | <a href="mailto:hn@ycombinator.com">Contact</a></span><br><br><form method="get" action="//hn.algolia.com/">Search:
-                    <input type="text" name="q" value="" size="17" autocorrect="off" spellcheck="false" autocapitalize="off" autocomplete="false"></form>
-                      </center></td></tr>
+          <tr><td><img src="s.gif" width="0" height="10"><table width="100%" cellspacing="0" cellpadding="1"><tbody><tr><td bgcolor="#ff6600"></td></tr></tbody></table>
+          <br><center>Created by: Adrian Alvarez, Marcel Costa, Luis Belloso, Sergio Pascual, Xavier Espinos</center>
+          <br><br><center>ASW FIB Project</center>
       </tbody>
       </table>
       </center>
