--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -65,7 +65,7 @@
                       </center>
                     </td>
                       <td class="title">
-                        <a link_to <% contribucion.title%>, contribucions_show_path> <%=contribucion.title%></a>
+                        <a href="/contribucions/<%=contribucion.id%>" class="storylink"><%=contribucion.title%></a>
                         <span class="sitebit comhead"> (<a href="<%=contribucion.url%>"><span class="sitestr"><%=contribucion.url%></span></a>)</span>
                       </td>
                     </tr>
