--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,6 @@
   <%= @user.email %>
 </p>
 
-
+<% if current_user().id == @user.id %>
+   <a href="/users/<%=@user.id%>/edit" class="hnuser">Edit Profile </a> 
+<%end%>
