--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
+<%= form_with(model: @user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -19,6 +19,16 @@
   <div class="field">
     <%= form.label :email %>
     <%= form.text_field :email %>
+  </div>
+  
+  <div class="field">
+    <%= form.label :password %>
+    <%= form.text_field :password %>
+  </div>
+  
+  <div class="field">
+    <%= form.label :repeatpassword %>
+    <%= form.text_field :repeatpassword %>
   </div>
 
   <div class="actions">
