--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+<%= render :partial => 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Save', @user, method: :update %> |
+<%= link_to 'Back', @user %>
