--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing User</h1>
 
-<%= render :partial => 'form' %>
+<%= render partial: 'form', locals: {user: @user}%>
 
 <%= link_to 'Save', @user, method: :update %> |
 <%= link_to 'Back', @user %>
