Edit profile fixed

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
   
   <div class="field">
-    <%= form.label :repeatpassword %>
+    <%= form.label :repeatpassword, 'Repeat Password' %>
     <%= form.text_field :repeatpassword %>
   </div>
 
