--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render partial: 'form', locals: {user: @user}%>
 
 <%= link_to 'Save', @user, method: :update %> |
-<%= link_to 'Back', @user %>
+<%= link_to 'Back', user_path %>
