--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
 
 <p>
   <strong>Contribucions:</strong>
-  <%= "Falta acabar"  %>
+  <%= link_to 'Contribucions',contribucions_submitted_path(:id => current_user().id),method: "get"  %>
 </p>
 
 <p>
