--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -1,7 +1,4 @@
-
 <%= render "menu/menu" %>
-            </td>
-          </tr>
           <% @rank = 1%>
           <tr id="pagespace" title="" style="height:10px"></tr>
           <tr>
@@ -46,7 +43,7 @@
                             <%= link_to 'Destroy', contribucion, method: :delete, data: {confirm: 'Are you sure?'} %>
                           <% end %>
                         <% end %>  
-                        <span id="unv_22681207"></span> | <a href="hide?id=22681207&amp;goto=news">hide</a> | <a href="item?id=22681207">0&nbsp;comments</a>              
+                        <span id="unv_22681207"></span> | <a href="hide?id=22681207&amp;goto=news">hide</a> | <%= link_to 'comments',comentaris_new_path(:id => contribucion.id), method: :get %>
                       </td>
                     </tr>
                     <tr class="spacer" style="height:5px"></tr>
