--- a/app/views/comentaris/show.html.erb
+++ b/app/views/comentaris/show.html.erb
@@ -1,2 +1,45 @@
-<h1>Comentaris#show</h1>
-<p>Find me in app/views/comentaris/show.html.erb</p>
+
+<body>
+    <center>
+        <table id="hnmain" width="85%" cellspacing="0" cellpadding="0" border="0" bgcolor="#f6f6ef">
+            <tbody>
+                <tr>
+                    <td bgcolor="#ff6600">
+                        <table style="padding:2px" width="100%" cellspacing="0" cellpadding="0" border="0">
+                            <tbody>
+                                <tr>
+                                    <td style="width:18px;padding-right:4px">
+                                        <a href="/"><%= image_tag("logo.gif", style: "border:1px white solid; width:18; height:18") %>
+                                        </a>
+                                    </td>
+                                    <td style="line-height:12pt; height:10px;">
+                                        <span style="color:#000000">
+                                            <b>Add Comment</b>
+                                        </span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                <tr id="pagespace" title="Add Comment" style="height:10px"></tr>
+                <tr>
+                    <td>
+                        <table class="fatitem" border="0">
+                            <tbody>
+                                <tr>
+                                    <div class="comment">
+                                        <span class="commtext c00"> <%= User.find(params[:id]).name %></span>
+                                        <span class="commtext c00"> <%= Comentari.find(params[:id]).text %></span>
+                                    </div>
+                                </tr>
+                            </tbody>
+                            
+                        </table>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        
+    </center>
+</body>
