--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -12,7 +12,7 @@
                       </td>      
                     <td class="votelinks" valign="top">
                       <center>
-                        <a id="up_22681207" <%= link_to '▲', upvote_contribucion_path(contribucion), method: :put %>
+                        <a id="up_22681207" <%= link_to '▲', upvote_contribucion_path(contribucion, :lloc => "main"), method: :put %>
                         </a>
                       </center>
                     </td>
