Ask redirigeix a texts

--- a/app/views/menu/_menu.html.erb
+++ b/app/views/menu/_menu.html.erb
@@ -31,7 +31,7 @@
                       <%= link_to "new", contribucions_newPage_path %>
                       | <a href="front">past</a> 
                       | <a href="newcomments">comments</a> 
-                      | <a href="ask">ask</a> |
+                      | <%= link_to "ask", contribucions_askPage_path %> |
                       <a href="show">show</a> |
                       <a href="jobs">jobs</a> | 
                       <%= link_to 'submit', new_contribucion_path %>
