--- a/app/views/contribucions/show.html.erb
+++ b/app/views/contribucions/show.html.erb
@@ -94,7 +94,7 @@
                               <p>
                                 <font size="1">
                                     
-                                    <a href="/contribucions/<%=@contribucion.id%>/comentaris/<%=c.id%>">reply</a>
+                                    <a href="/contribucions/<%=@contribucion.id%>/comentaris/<%=c.id%>/">reply</a>
                                 </font>
                               </p>
                             </div>
@@ -104,7 +104,7 @@
                   <%end%>
             </tr>
         <%end%>
-        
+
       </table>
     </td>
 </tr>
