--- a/app/views/comentaris/new.html.erb
+++ b/app/views/comentaris/new.html.erb
@@ -2,7 +2,7 @@
   <%= render "menu/menu" %>
 <% end %>
 <% cache do %>
-    <%= render 'form', contribucion: @contribucion, comentari: @comentari, comentaris: @comentaris %>
+    <%= render 'form', contribucion: @contribucion, comentari: @comentari, comentaris: @comentaris,new: 1 %>
 <% end %>
 
 
