--- a/app/views/menu/_menu.html.erb
+++ b/app/views/menu/_menu.html.erb
@@ -29,6 +29,7 @@
                         <a href="/"> HackerNews</a>
                       </b>
                       <%= link_to "new", contribucions_newPage_path %>
+                      | <%= link_to 'threads', new_contribucion_path %>
                       | <a href="front">past</a> 
                       | <a href="newcomments">comments</a> 
                       | <%= link_to "ask", contribucions_askPage_path %> |
